syntax = "proto3";

package com.example.generated;
option java_multiple_files = true;

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message RegisterUserRequest {
  string email = 1;
  string password = 2;
  string fullName = 3;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message ApiResponse {
  uint32 code = 1;
  string message = 2;
}

service UserService {
  rpc login(LoginUserRequest) returns (ApiResponse);
  rpc register(RegisterUserRequest) returns (ApiResponse);
  rpc deleteUser(DeleteUserRequest) returns (ApiResponse);
}